# otg

./: .gitignore  404.html  CNAME  CONTRIBUTING.html  LEGACY.md  README.md  _log_gemini.md  build.sh  index.html  methodology.html  mkdocs-en.yml  mkdocs-zh.yml  mkdocs.yml  pyproject.toml  sitemap.xml  story.html  tool_comparison.html  tool_list_category.html  tool_list_name.html
CONTRIBUTING/: index.html
assessment/: TOOL_TEMPLATE.html  data-structure.html  example-assessment.html  index.html  scoring.html
categories/: index.html
comparisons/: ad-tracker-blocking.html  ai-chat.html  browser.html  data-&-metadata-redaction.html  email-clients.html  encryption.html  file-transfer.html  index.html  language-tools.html  messaging.html  notebooks.html  office-suite.html  password-management.html  pastebins.html  privacy-search-engine.html  vpn-services.html
docs/: methodology.md  tool_list_name.md
docs-en/: CONTRIBUTING.md  index.md  story.md  tool_comparison.md  tool_evaluated.md  tool_list_category.md  toollist_byname.md
docs-zh/: CONTRIBUTING.md  index.md  story.md  tool_comparison.md  tool_evaluated.md  toollist_byname.md  toollist_category.md
en/: 404.html  index.html  sitemap.xml  tool_evaluated.md.bak
overrides/: main.html
search/: search_index.js  search_index.json
site/: 404.html  index.html  sitemap.xml  story.html  tool_comparison.html  tool_list_category.html  tool_list_name.html
story/: index.html
tool_comparison/: index.html
toollist_byname/: index.html
tools/: evaluated-tools.html  evaluated-tools.md
venv_mkdocs/: pyvenv.cfg
(+293 files in other folders)
